--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -5,30 +5,61 @@
   transform: translateX(-50%);
 }
 
-.work h1, h2 { text-align: center; }
-.work h2 { padding-bottom: 20px; }
-.work h1 { padding-bottom: 20px; }
-.work h3 { font-weight: 600; }
+.work h1,
+h2 {
+  text-align: center;
+}
 
-.work .text { padding: 40px 0 0 40px; }
-.work p { 
-  width: 420px; 
+.work h2 {
+  padding-bottom: 20px;
+}
+
+.work h1 {
+  padding-bottom: 20px;
+}
+
+.work h3 {
+  font-weight: 600;
+}
+
+.work .text {
+  padding: 40px 0 0 40px;
+}
+
+@media all and (max-width: 479px) {
+  .work .text {
+    padding: 30px 0 0 10px;
+  }
+}
+
+.work p {
+  width: 420px;
   display: block;
 }
-@media all and (max-width: 479px) { .work p { width: 350px;} }
+
+@media all and (max-width: 479px) {
+  .work p {
+    max-width: 330px;
+  }
+}
 
 .work img {
   width: 470px;
   height: 300px;
 }
-@media all and (max-width: 479px) {  }
 
-.work .col { display: inline-block; }
+@media all and (max-width: 479px) {
+  .work img {
+    width: 380px;
+    height: 230px;
+  }
+}
 
 .row .gutter {
   margin-left: 20;
   margin-right: 20;
 }
+
 .row .gutter [class*='col-']:not(:first-child),
 .row .gutter [class*='col-']:not(:last-child) {
   padding-right: 0;
